# codeforces-workspace

./: .cfconfig  .clang-format  .gitignore  CMakeLists.txt  template.cpp
.devcontainer/: Dockerfile  devcontainer.json
1269/a/: a.cpp
1269/d/: d.cpp
1270/a/: a.cpp
1270/e/: e.cpp
1283/a/: a.cpp
1283/b/: b.cpp
1283/d/: d.cpp
1284/a/: a.cpp
1284/b/: b.cpp
1284/d/: d.cpp
